# ToolMerge

./: .gitignore  README.md  pyproject.toml
baselines/: README.md
baselines/aks/: README.md  run.py
baselines/blind_text/: run.py
baselines/bolt/: README.md  run.py
baselines/lif/: README.md  README_TOOLMERGE.md  environment.yml  gpt_eval_vsls.py  install.sh  run_VSLS_demo.py  run_clip_deduped_qwen3.py  run_group1_0412_qwen3.py  run_lv_bench_qwen3.py  run_lvb_qwen3.py  run_vmme_qwen3.py  val_kfs_results.py
baselines/oracle/: run.py
baselines/siglip_q/: run.py
baselines/uniform/: run.py
baselines/wfs/: .gitignore  README.md  README_TOOLMERGE.md  requirements.txt  run.py
cache_build/: README.md  __init__.py  build_caches.py  ocr.py  ocr_judge.py  siglip.py  tren.py  utils.py
cache_build/slurm/: build_cache.sbatch
configs/: default.yaml  smoke.yaml
configs/lvb/: gpt4o_32.yaml  gpt4o_8.yaml  qwen3_32.yaml  qwen3_8.yaml
data/: README.md
env/: lif.yaml  toolmerge.yaml
paper_keyframes/: README.md  summary.json
scripts/: download_caches.sh  download_tren_weights.sh  eval_caption_retrieval.py  run_caption_retrieval_all_baselines.py  run_table.sh
tests/: test_merging.py  test_planner_parser.py  test_selection.py
toolmerge/: __init__.py  answerer.py  caches.py  config.py  inputs.py  merging.py  pipeline.py  planner.py  qwen_vl_utils.py  run.py  selection.py
training/: __init__.py  config_schema.py  frame_selection_backend.py  grpo_trainer.py  planner_dataset.py  reward.py  train.py
tren/: README.md  __init__.py  model.py  task_utils.py
(+259 files in other folders)
