[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolmerge"
version = "0.1.0"
description = "Decomposing queries into tool calls for long-video keyframe retrieval."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.45",
    "accelerate>=0.30",
    "omegaconf>=2.3",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "decord>=0.6",
    "Pillow>=10",
    "tqdm>=4.65",
    "easyocr>=1.7",
    "rapidfuzz>=3.5",
    "openai>=1.30",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
training = [
    "trl>=0.27",
    "peft>=0.10",
    "deepspeed>=0.14",
    "wandb>=0.16",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
toolmerge = "toolmerge.run:main"

[tool.setuptools.packages.find]
include = ["toolmerge*", "training*", "tren*", "cache_build*"]
exclude = ["tests*", "baselines*"]
